# prompteval

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py  app.py
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  analysis.py  prompts.py
backend/services/: __init__.py  config.py  heuristics.py  llm.py
cli/: __init__.py  main.py  parser.py
config/: default_rules.yaml  strict_rules.yaml
examples/: sample-prompts.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: FileUpload.tsx  IssueCard.tsx  PromptDetail.tsx  PromptInput.tsx  PromptList.tsx  RadarChart.tsx
